manifests/apps/talos/zitadel/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
      sectionName: websecure
  hostnames:
    - idp.bigli.io
  rules:
    - backendRefs:
        - name: zitadel
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route-redirect
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
      sectionName: web
  hostnames:
    - idp.bigli.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
